--- a/crates/common/Cargo.toml
+++ b/crates/common/Cargo.toml
@@ -13,6 +13,7 @@ async-trait = "0.1"
 futures = { workspace = true }
 thiserror = "1.0"
 uuid = { version = "1.0", features = ["v4"] }
+tokio = { workspace = true, features = ["sync", "time"] }
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["test-util"] }
