--- a/crates/local-api/Cargo.toml
+++ b/crates/local-api/Cargo.toml
@@ -21,7 +21,7 @@ tracing-subscriber.workspace = true
 async-stream.workspace = true
 futures.workspace = true
 bytes.workspace = true
-tower = "0.5"
+tower = { version = "0.5", features = ["timeout"] }
 tower-http = { version = "0.6", features = ["cors", "trace"] }
 tokio-stream = "0.1"
 uuid = { version = "1.11", features = ["v4", "serde"] }
